base_layout 전체 페이지 고정 및 스크롤바 비활성화 설정

--- a/src/main/resources/templates/layout/base_layout.html
+++ b/src/main/resources/templates/layout/base_layout.html
@@ -58,6 +58,11 @@
 		그리고 하위 요소들이 커지면서 그 높이가 min-height 값을 초과하면, 길이가 자동으로 늘어남. */
  -->
 <style>
+html, body {
+    height: 100%;
+    overflow: hidden; /* 페이지 크기 고정, 스크롤바 비활성화 */
+}
+
 .layout {
 	width: 1366px;
 	height: 768px;
